--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,13 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// h2
+	runtimeOnly 'com.h2database:h2'
+
+	// unit
+	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+
 }
 
 test {
