--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,28 @@
 spring:
-  jpa:
-    show-sql: false
-    open-in-view: false
-    hibernate:
-      ddl-auto: update
+  environments:
+    development:
+      jpa:
+        show-sql: false
+        open-in-view: false
+        hibernate:
+          ddl-auto: update
 
-  datasource:
-    url: jdbc:mysql://127.0.0.1:3306/financial?useLegacyDatetimeCode=false&serverTimezone=GMT&sessionVariables=character_set_client=utf8mb4,character_set_connection=latin1,character_set_results=utf8mb4,collation_connection=latin1_swedish_ci
-    username: root
-    password: rootpassword
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    testWhileIdle: true
-    validationQuery: SELECT 1
+      datasource:
+        url: jdbc:mysql://127.0.0.1:3306/financial?useLegacyDatetimeCode=false&serverTimezone=GMT&sessionVariables=character_set_client=utf8mb4,character_set_connection=latin1,character_set_results=utf8mb4,collation_connection=latin1_swedish_ci
+        username: root
+        password: rootpassword
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        testWhileIdle: true
+        validationQuery: SELECT 1
+
+    test:
+      datasource:
+        url: jdbc:h2:mem:testdb
+        driverClassName: org.h2.Driver
+        username: sa
+        password: password
+        jpa:
+          database-platform: org.hibernate.dialect.H2Dialect
+        h2:
+          console:
+            enabled: true
