--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/financial?useLegacyDatetimeCode=false&serverTimezone=GMT&sessionVariables=character_set_client=utf8mb4,character_set_connection=latin1,character_set_results=utf8mb4,collation_connection=latin1_swedish_ci
     username: root
-    password: rootpassword
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     testWhileIdle: true
     validationQuery: SELECT 1
